--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook": "^8.1.4",
     "react-flickity-component": "^3.6.2",
     "react-multi-carousel": "^2.6.5",
     "react-social-icons": "^5.10.0",
