--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@graphcms/rich-text-react-renderer": "^0.5.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "graphql": "^16.1.0",
     "graphql-request": "^3.7.0",
     "html-react-parser": "^1.4.3",
     "moment": "^2.29.1",
-    "next": "latest",
+    "next": "^12.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
