--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "sass": "^1.45.0"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "typescript": "^5.1.3"
   }
 }
