--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "@graphcms/rich-text-react-renderer": "^0.5.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "google-auth-library": "^9.11.0",
+    "google-spreadsheet": "^4.1.2",
     "graphql": "^16.1.0",
     "graphql-request": "^3.7.0",
     "html-react-parser": "^1.4.3",
+    "lucide-react": "^0.399.0",
     "moment": "^2.29.1",
     "next": "^12.1.6",
+    "node-cache": "^5.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook": "^8.1.4",
     "react-flickity-component": "^3.6.2",
     "react-multi-carousel": "^2.6.5",
     "react-social-icons": "^5.10.0",
-    "sass": "^1.45.0"
+    "sass": "^1.45.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
