--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@graphcms/rich-text-react-renderer": "^0.5.0",
@@ -31,9 +32,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^12.1.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.2.5",
     "@types/react": "^18.2.8",
     "autoprefixer": "^10.4.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.4",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.1.3"
